# qtvr

./: .gitignore  CMakeLists.txt  shell.nix
include/windows/: main_window.h
src/: main.cpp
src/windows/: main_window.cpp
